[tool.poetry]
name = "pytwittersdk"
version = "0.1.0"
description = "A Python SDK for the API Twitter"
authors = ["Rich <richelton14@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
requests_oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
